# simple-rag

./: .gitignore  BOE-A-1978-31229-consolidado.pdf.md  README.md  pyproject.toml
src/: validate_all_strategies.py  validate_phase1.py  validate_phase2.py  validate_phase3.py
src/srag/components/chunkers/: __init__.py  fixed_length_chunker.py  hybrid_chunker.py  node_parser_chunker.py
src/srag/components/embeddings/: __init__.py  huggingface_embeddings.py  ollama_embeddings.py
src/srag/components/llms/: __init__.py  gemini_llm.py  huggingface_llm.py  ollama_llms.py
src/srag/components/loaders/: __init__.py  llama_parse_loader.py
src/srag/components/vectorstores/: __init__.py  chroma_vectorstore.py
src/srag/core/: __init__.py  interfaces.py  types.py
src/srag/pipeline/: __init__.py  ingestion.py
src/srag/strategies/: __init__.py  adaptative.py  advanced_hybrid.py  base.py  hybrid.py  hyde.py  modular.py  simple.py
tests/components/chunkers/: test_fixed_length_chunker.py  test_hybrid_chunker.py
tests/components/embeddings/: test_ollama_embeddings.py
tests/components/llms/: test_ollama_llms.py
tests/components/loaders/: test_llama_parse_loader.py
tests/components/vectorstores/: test_chroma_vectorstore.py
tests/integration/: test_integration.py
